# HttpArena

frameworks/aleph/: meta.json  project.clj
frameworks/dart-io/: Dockerfile  benchmark_http_server.aot  benchmark_http_server.dart  build.sh  entrypoint.sh  meta.json  reuseport_shim.c
frameworks/dart-zig/: Dockerfile  README.md  benchmark_http_server.dart  build.sh  entrypoint.sh  meta.json
frameworks/fasthttp/: meta.json
frameworks/fleck/: Dockerfile  Program.cs  README.md  fleckws.csproj  meta.json
frameworks/fletch/: meta.json
frameworks/genhttp-11/: meta.json
frameworks/hyperf/: meta.json
frameworks/ktor/: Dockerfile  build.gradle.kts
frameworks/minima/: Dockerfile  Program.cs  README.md  ServerConfig.cs  meta.json  minima.csproj
frameworks/pico/: meta.json
frameworks/rage/: Gemfile  meta.json
frameworks/rails/: Dockerfile
frameworks/ring-http-exchange/: meta.json  project.clj
frameworks/roadrunner/: .gitignore  Dockerfile  README.md  bench-results.md  meta.json  rebar.config
frameworks/roda/: app.rb  config.ru
frameworks/sinatra/: Gemfile  app.rb  meta.json
frameworks/slimeweb/: meta.json
frameworks/swerver/: Dockerfile  build.zig  build.zig.zon  config-h1.json  config-tls.json  main.zig  meta.json
frameworks/swoole/: meta.json
frameworks/swoole-websocket/: meta.json
frameworks/tokio/: Cargo.toml  Dockerfile  README.md  meta.json
frameworks/tokio/src/: main.rs
frameworks/wtx-ws/: Cargo.toml  Dockerfile  meta.json
frameworks/wtx-ws/src/: main.rs
scripts/: gen_new_leaderboard_data.py  validate.sh
(+213 files in other folders)
